--- a/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
@@ -19,12 +19,14 @@
 
     @using (var form = Html.f().Form().Horizontal().Label_col_sm(2).Input_col_sm(10).BeginForm())
     {
-        @form.TextBoxFor(Model => Model.FirstName)
-        @form.TextBoxFor(Model=> Model.LastName)
-        @form.PasswordFor(Model=>Model.Password)
-        @form.CheckBoxFor(Model=>Model.AcceptTerms)
-        @form.RadioButtonFor(Model => Model.Gender, "M").LabelText("Male")
-        @form.RadioButtonFor(Model => Model.Gender, "F").LabelText("Female")
+        @form.TextBoxFor(m => m.FirstName)
+        @form.TextBoxFor(m=> m.LastName)
+        @form.PasswordFor(m=>m.Password)
+        @form.CheckBoxFor(m=>m.AcceptTerms)
+        @form.RadioButtonFor(m => m.Gender, "M").LabelText("Male")
+        @form.RadioButtonFor(m => m.Gender, "F").LabelText("Female")
+        @form.DropDownListFor(m=>m.TimeZoneId,Model.AvailableTimeZones)
+      
     } 
 
     
