--- a/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Form", "Horizontal", "Form")</li>
-                    <li>@Html.ActionLink("Input", "Index", "Input")</li>
+                    <li>@Html.ActionLink("Input", "Select", "Input")</li>
                 </ul>
             </div>
         </div>
