--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -26,7 +26,8 @@
         @form.RadioButtonFor(m => m.Gender, "M").LabelText("Male")
         @form.RadioButtonFor(m => m.Gender, "F").LabelText("Female")
         @form.ListBoxFor(m=>m.TimeZoneId,Model.AvailableTimeZones)
-        
+        @form.TextBoxFor(m => m.File, new {type="file" })
+        @form.TextAreaFor(m=>m.Description)
         
     }
 
