--- a/src/FlexHtmlHelper.Sample/Views/Form/Inline.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Inline.cshtml
@@ -22,11 +22,12 @@
 
     @using (var form = Html.f().Form().Inline().Label_col_sm(2).Input_col_sm(10).BeginForm())
     {
-        @form.TextBoxFor(Model => Model.FirstName)
-        @form.TextBoxFor(Model => Model.LastName)
-        @form.PasswordFor(Model => Model.Password)
-        @form.CheckBoxFor(Model => Model.AcceptTerms)
-
+        @form.TextBoxFor(m => m.FirstName)
+        @form.TextBoxFor(m => m.LastName)
+        @form.PasswordFor(m => m.Password)        
+        @form.DropDownListFor(m=>m.TimeZoneId,Model.AvailableTimeZones)
+        @form.TextBoxFor(m => m.File, new {type="file" })
+        @form.CheckBoxFor(m => m.AcceptTerms)
     }
 
 
