--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -19,8 +19,9 @@
 
     @using (var form = Html.f().Form().Label_col_sm(2).Input_col_sm(10).BeginForm())
     {
-        @form.TextBoxFor(m => m.FirstName).HelpText("Enter First Name").Placeholder("First Name");
-        @form.TextBoxFor(m => m.LastName)
+        @form.TextBoxFor(m => m.FirstName).HelpText("Enter First Name").Placeholder("First Name").Focus()
+        @form.TextBoxFor(m => m.LastName).HasSuccess()
+        @form.TextBoxFor(m => m.Email).Disabled()
         @form.PasswordFor(m => m.Password)
         @form.CheckBoxFor(m => m.AcceptTerms)        
         @form.RadioButtonFor(m => m.Gender, "M").LabelText("Male")
