--- a/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
@@ -17,10 +17,12 @@
 
 <div class="row">
 
-    @using (var form = Html.f().Form().Horizontal().Label_col_sm(2).Input_col_sm(10).BeginForm())
+    @using (var form = Html.f().Form().Horizontal().Label_col_sm(2).Input_col_sm(4).Input_col_md(4).BeginForm())
     {
         @form.TextBoxFor(m => m.FirstName)
-        @form.TextBoxFor(m=> m.LastName)
+        @form.StaticFor(m=>m.FirstName)
+        @form.TextBoxFor(m=> m.LastName).HasError()
+        @form.TextBoxFor(m=>m.Title).Large()
         @form.PasswordFor(m=>m.Password)
         @form.CheckBoxFor(m=>m.AcceptTerms)
         @form.RadioButtonFor(m => m.Gender, "M").LabelText("Male")
@@ -28,6 +30,7 @@
         @form.DropDownListFor(m=>m.TimeZoneId,Model.AvailableTimeZones)
         @form.TextBoxFor(m => m.File, new {type="file" })
         @form.TextAreaFor(m=>m.Description)
+        @form.StaticFor(m=>m.Log)
     } 
 
     
