--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -17,11 +17,11 @@
 
 <div class="row">
 
-    @using (var form = Html.f().Form().Label_col_sm(2).Input_col_sm(10).BeginForm())
+    @using (var form = Html.f().Form().Label_col_sm(2).Input_col_sm(6).BeginForm())
     {
         @form.TextBoxFor(m => m.FirstName).HelpText("Enter First Name").Placeholder("First Name").Focus()
         @form.TextBoxFor(m => m.LastName).HasSuccess()
-        @form.TextBoxFor(m => m.Email).Disabled()
+        @form.TextBoxFor(m => m.Email).CheckBoxFor(m=>m.BlogPosts)
         @form.PasswordFor(m => m.Password)
         @form.CheckBoxFor(m => m.AcceptTerms)        
         @form.RadioButtonFor(m => m.Gender, "M").LabelText("Male")
@@ -29,6 +29,7 @@
         @form.ListBoxFor(m=>m.TimeZoneId,Model.AvailableTimeZones)
         @form.TextBoxFor(m => m.File, new {type="file" })
         @form.TextAreaFor(m=>m.Description)
+        @form.CheckBoxFor(m=>m.ForumPosts).CheckBoxFor(m=>m.Newsletter)
         
         <div class="form-group">
        
