--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -24,8 +24,7 @@
         @form.TextBoxFor(m => m.Email).CheckBoxFor(m=>m.BlogPosts)
         @form.PasswordFor(m => m.Password)
         @form.CheckBoxFor(m => m.AcceptTerms)        
-        @form.RadioButtonFor(m => m.Gender, "M").LabelText("Male")
-        @form.RadioButtonFor(m => m.Gender, "F").LabelText("Female")
+        @form.RadioButtonFor(m => m.Gender, "M").LabelText("Male").RadioButtonFor(m => m.Gender, "F").LabelText("Female")
         @form.ListBoxFor(m=>m.TimeZoneId,Model.AvailableTimeZones)
         @form.TextBoxFor(m => m.File, new {type="file" })
         @form.TextAreaFor(m=>m.Description)
