improved samples refactor names for the flex elements extension methods

--- a/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
@@ -7,9 +7,9 @@
 <br />
 <div class="row">
     <ul class="nav nav-pills">
-        <li class="active">@Html.ActionLink("Horizontal", "Horizontal")</li>
-        <li>@Html.ActionLink("Inline", "Inline")</li>
         <li>@Html.ActionLink("Default", "Default")</li>
+        <li class="active">@Html.ActionLink("Horizontal", "Horizontal")</li>
+        <li>@Html.ActionLink("Inline", "Inline")</li>        
     </ul>
 </div>
 
@@ -17,20 +17,23 @@
 
 <div class="row">
 
-    @using (var form = Html.f().Form().Horizontal().Label_col_sm(2).Input_col_sm(4).Input_col_md(4).BeginForm())
+    @using (var form = Html.f().Form().horizontal().control_label_col_sm(2).control_col_sm(4).control_col_md(4).BeginForm())
     {
-        @form.TextBoxFor(m => m.FirstName).CheckBoxFor(m=>m.AcceptTerms)
-        @form.StaticFor(m => m.FirstName)
-        @form.TextBoxFor(m => m.LastName).HasError().Col_md(8).hidden_sm()
-        @form.TextBoxFor(m => m.Email).CheckBoxFor(m=>m.BlogPosts)
-        @form.TextBoxFor(m => m.Title).Large()
-        @form.PasswordFor(m => m.Password)
-        @form.CheckBoxFor(m => m.AcceptTerms)
-        @form.CheckBoxFor(m=>m.ForumPosts).CheckBoxFor(m=>m.Newsletter)
-        @form.RadioButtonFor(m => m.Gender, "M").LabelText("Male").RadioButtonFor(m => m.Gender, "F").LabelText("Female")
-        @form.DropDownListFor(m => m.TimeZoneId, Model.AvailableTimeZones).HasError()
-        @form.TextBoxFor(m => m.File, new { type = "file" })
-        @form.TextAreaFor(m => m.Description)
+        @form.HiddenFor(m=>m.PersonId)
+        @form.TextBoxFor(m => m.FirstName).input_placeholder("input_lg input_focus").input_focus().input_lg()
+        @form.TextBoxFor(m => m.LastName).input_placeholder("has_error").has_error()
+        @form.TextBoxFor(m => m.Email).input_placeholder("col_md_6").input_col_md(6)
+        @form.TextBoxFor(m => m.Title).input_placeholder("disabled").input_disabled()
+        @form.PasswordFor(m => m.Password).input_col_md(3).help_text("at least 6 characters")
+        
+        @form.RadioButtonFor(m => m.Gender, "M").label_text("Male").RadioButtonFor(m => m.Gender, "F").label_text("Female")
+        @form.DropDownListFor(m=>m.TimeZoneId,Model.AvailableTimeZones).input_col_md(6)
+        @form.ListBoxFor(m => m.FavoriteMusicGenres, Model.AvailableFavoriteMusicGenres).input_col_md(6).help_text("You can select multiple genres by holding the ctrl key on your keyboard")
+        @form.RadioButtonFor(m => m.Race, "W").label_text("White").RadioButtonFor(m => m.Race, "B").label_text("Black").RadioButtonFor(m => m.Race, "A").label_text("Asian").RadioButtonFor(m => m.Race, "L").label_text("latin")
+        @form.TextBoxFor(m => m.File, new {type="file" })
+        @form.TextAreaFor(m => m.Description).input_col_md(6)
+        @form.CheckBoxFor(m=>m.ForumPosts).CheckBoxFor(m=>m.Newsletter).CheckBoxFor(m=>m.BlogPosts)
+        @form.CheckBoxFor(m => m.AcceptTerms).label_text("I have read and accepted the terms and conditions")
         @form.StaticFor(m => m.Log)
        
     }
