--- a/src/FlexHtmlHelper.Sample/Views/Input/Style.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Input/Style.cshtml
@@ -11,35 +11,30 @@
         <li>@Html.ActionLink("TextBox", "TextBox")</li>
         <li>@Html.ActionLink("CheckBox", "CheckBox")</li>
         <li>@Html.ActionLink("Radio", "Radio")</li>
-        <li class="active">@Html.ActionLink("Select", "Select")</li>
+        <li>@Html.ActionLink("Select", "Select")</li>
         <li>@Html.ActionLink("TextArea", "TextArea")</li>
-        <li>@Html.ActionLink("Style", "Style")</li>
+        <li class="active">@Html.ActionLink("Style", "Style")</li>
     </ul>
 </div>
 
 
 <br />
 <div class="row">
-    @Html.f().DropDownList("AvailableTimeZones")
+    @Html.f().TextBoxFor(m=>m.FirstName).placeholder("tpye first name here")
 </div>
 <br />
 <div class="row">
-    @Html.f().DropDownList("AvailableTimeZones", "Select one")
+    @Html.f().TextBoxFor(m => m.FirstName).placeholder("first name disabled").disabled()
 </div>
 <br />
 <div class="row">
-    @Html.f().DropDownList("TimeZoneId", Model.AvailableTimeZones)
+    @Html.f().TextBoxFor(m => m.FirstName).placeholder("first name large").large()
 </div>
 <br />
 <div class="row">
-    @Html.f().DropDownList("TimeZoneId", Model.AvailableTimeZones, "Choose one")
+    @Html.f().TextBoxFor(m => m.FirstName).placeholder("first name large").small()
 </div>
 <br />
 <div class="row">
-    @Html.f().DropDownListFor(m => m.TimeZoneId, Model.AvailableTimeZones)
+    @Html.f().TextBoxFor(m => m.FirstName).placeholder("first name auto focus").focus()
 </div>
-<br />
-<div class="row">
-    @Html.f().DropDownListFor(m => m.TimeZoneId, Model.AvailableTimeZones, "Pick up one")
-</div>
-
