--- a/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - FlexHtmlHelper Sample Site</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -16,15 +16,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Application name", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("FlexHtmlHelper", "Row", "Grid", null, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Grid", "Row", "Grid")</li>                
+                    <li>@Html.ActionLink("Input", "Label", "Input")</li>
                     <li>@Html.ActionLink("Form", "Horizontal", "Form")</li>
-                    <li>@Html.ActionLink("Input", "Select", "Input")</li>
+                    <li>@Html.ActionLink("Partial", "Contact", "Partial")</li>
+                    <li>@Html.ActionLink("Table", "Table", "Table")</li>
+                    <li>@Html.ActionLink("Button", "Button", "Button")</li>
                 </ul>
             </div>
         </div>
