--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -34,6 +34,8 @@
         @form.CheckBoxFor(m=>m.ForumPosts).CheckBoxFor(m=>m.Newsletter).CheckBoxFor(m=>m.BlogPosts)
         @form.CheckBoxFor(m => m.AcceptTerms).label_text("I have read and accepted the terms and conditions")
         @form.StaticFor(m => m.Log)
+
+        @form.Button(Html.f().Button("submit", "Submit")).Button(Html.f().Button("button", "Cancel"))
     }
 
 
