add link button

--- a/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                     <li>@Html.ActionLink("Input", "Label", "Input")</li>
                     <li>@Html.ActionLink("Form", "Horizontal", "Form")</li>
                     <li>@Html.ActionLink("Partial", "Contact", "Partial")</li>
-                    <li>@Html.ActionLink("Table", "Table", "Table")</li>
+                    <li>@Html.ActionLink("Link", "Link", "Link")</li>
                     <li>@Html.ActionLink("Button", "Button", "Button")</li>
                 </ul>
             </div>
