--- a/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
@@ -22,8 +22,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Grid", "Row", "Grid")</li>                
                     <li>@Html.ActionLink("Input", "Label", "Input")</li>
-                    <li>@Html.ActionLink("Form", "Horizontal", "Form")</li>
-                    <li>@Html.ActionLink("Partial", "Contact", "Partial")</li>
+                    <li>@Html.ActionLink("Form", "Default", "Form")</li>                    
                     <li>@Html.ActionLink("Link", "Link", "Link")</li>
                     <li>@Html.ActionLink("Button", "Button", "Button")</li>
                 </ul>
