--- a/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
@@ -10,6 +10,7 @@
         <li>@Html.ActionLink("Default", "Default")</li>
         <li class="active">@Html.ActionLink("Horizontal", "Horizontal")</li>
         <li>@Html.ActionLink("Inline", "Inline")</li>
+        <li>@Html.ActionLink("Partial", "Partial")</li>
     </ul>
 </div>
 
