--- a/src/FlexHtmlHelper.Sample/Views/Form/Inline.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Inline.cshtml
@@ -12,7 +12,8 @@
     <ul class="nav nav-pills">
         <li>@Html.ActionLink("Default", "Default")</li>
         <li>@Html.ActionLink("Horizontal", "Horizontal")</li>
-        <li class="active">@Html.ActionLink("Inline", "Inline")</li>        
+        <li class="active">@Html.ActionLink("Inline", "Inline")</li>
+        <li>@Html.ActionLink("Partial", "Partial")</li>
     </ul>
 </div>
 
