--- a/src/FlexHtmlHelper.Sample/Views/Link/Button.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Link/Button.cshtml
@@ -8,7 +8,8 @@
 <div class="row">
     <ul class="nav nav-pills">
         <li>@Html.ActionLink("Link", "Link")</li>
-        <li class ="active">@Html.ActionLink("Link Button", "Button")</li>        
+        <li class ="active">@Html.ActionLink("Link Button", "Button")</li>
+        <li>@Html.ActionLink("Paging Link", "Paging")</li>        
     </ul>
 </div>
 
