fix flexement css and attr not working added more li on the flexlink

--- a/src/FlexHtmlHelper.Sample/Views/Button/Button.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Button/Button.cshtml
@@ -20,7 +20,7 @@
 </div>
 <br />
 <div class="row">
-   @Html.f().Button("button", "Default")
+   @Html.f().Button("button", "Default").attr("name","search")
 </div>
 <br />
 <div class="row">
