--- a/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
@@ -26,7 +26,9 @@
                     <li>@Html.ActionLink("Form", "Default", "Form")</li>                    
                     <li>@Html.ActionLink("Link", "Link", "Link")</li>
                     <li>@Html.ActionLink("Button", "Button", "Button")</li>
+                    <li>@Html.ActionLink("Table", "Table", "Table")</li>
                     <li>@Html.ActionLink("JavaScript", "Collapse", "JavaScript")</li>
+                    <li>@Html.ActionLink("Tag", "Tag", "Tag")</li>
                 </ul>
             </div>
         </div>
