added ajax for link and form added flexicon

--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -11,6 +11,7 @@
         <li>@Html.ActionLink("Horizontal", "Horizontal")</li>
         <li>@Html.ActionLink("Inline", "Inline")</li>
         <li>@Html.ActionLink("Partial", "Partial")</li>
+        <li>@Html.ActionLink("Ajax", "Ajax")</li>
     </ul>
 </div>
 
