--- a/src/FlexHtmlHelper.Sample/Views/Form/Inline.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Inline.cshtml
@@ -14,6 +14,7 @@
         <li>@Html.ActionLink("Horizontal", "Horizontal")</li>
         <li class="active">@Html.ActionLink("Inline", "Inline")</li>
         <li>@Html.ActionLink("Partial", "Partial")</li>
+        <li>@Html.ActionLink("Ajax", "Ajax")</li>
     </ul>
 </div>
 
