--- a/src/FlexHtmlHelper.Sample/Views/Link/Link.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Link/Link.cshtml
@@ -10,6 +10,7 @@
         <li class="active">@Html.ActionLink("Link", "Link")</li>
         <li>@Html.ActionLink("Link Button", "Button")</li>
         <li>@Html.ActionLink("Paging Link", "Paging")</li>
+        <li>@Html.ActionLink("Ajax Link", "Ajax")</li>
     </ul>
 </div>
 
