--- a/src/FlexHtmlHelper.Sample/Views/Link/Button.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Link/Button.cshtml
@@ -1,15 +1,15 @@
 ﻿@model Person
 @{
     ViewBag.Title = "Button";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
-
+    Layout = "~/Views/Shared/_Layout.cshtml";    
+    }
 <br />
 <div class="row">
     <ul class="nav nav-pills">
         <li>@Html.ActionLink("Link", "Link")</li>
-        <li class ="active">@Html.ActionLink("Link Button", "Button")</li>
-        <li>@Html.ActionLink("Paging Link", "Paging")</li>        
+        <li class="active">@Html.ActionLink("Link Button", "Button")</li>
+        <li>@Html.ActionLink("Paging Link", "Paging")</li>
+        <li>@Html.ActionLink("Ajax Link", "Ajax")</li>
     </ul>
 </div>
 
