added tag support for ihtmlstring added flexmodal rename partial view start with underscore flextagbuilder addtag(tag) return this

--- a/src/FlexHtmlHelper.Sample/Views/JavaScript/Collapse.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/JavaScript/Collapse.cshtml
@@ -11,6 +11,7 @@
 <div class="row">
     <ul class="nav nav-pills">       
         <li class="active">@Html.ActionLink("Collapse", "Collapse")</li>
+        <li>@Html.ActionLink("Modal", "Modal")</li>
     </ul>
 </div>
 
