add function to add css style to tag fix AddCssClass not pass parameter checkDuplicate

--- a/src/FlexHtmlHelper.Sample/Views/Icon/Button.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Icon/Button.cshtml
@@ -20,7 +20,7 @@
 </div>
 <br />
 <div class="row">
-    @f.Button("button", " Star").AddFirst(f.Icon("star"))
+    @f.Button("button", " Star").AddFirst(f.Icon("star").css("color","red"))
 </div>
 <br />
 
