--- a/src/FlexHtmlHelper.Sample/Views/Link/Link.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Link/Link.cshtml
@@ -20,5 +20,5 @@
 </div>
 <br/>
 <div class="row">
-    @Html.f().ActionLink("Link", "Link","Link")
+    @Html.f().ActionLink("", "Link","Link")
 </div>
