--- a/src/FlexHtmlHelper.Sample/Views/Grid/Row.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Grid/Row.cshtml
@@ -25,3 +25,6 @@
     @Html.f().DropDownListFor(m => m.TimeZoneId, Model.AvailableTimeZones).row()
 <br />
     @Html.f().TextAreaFor(m=>m.Description).col_md(4).placeholder("textarea col_md(4).row").row()
+
+<br />
+<script src="http://gist-it.appspot.com/github/liuhongbo/FlexHtmlHelper/blob/master/src/FlexHtmlHelper.Sample/Views/Grid/Row.cshtml?footer=0"></script>
