--- a/src/FlexHtmlHelper.Sample/Views/Form/Inline.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Inline.cshtml
@@ -1,24 +1,7 @@
-﻿@using FlexHtmlHelper.Mvc;
-@using FlexHtmlHelper.Mvc.Html;
-@using FlexHtmlHelper.Render;
-@model Person
+﻿@model Person
 @{
-    ViewBag.Title = "Inline";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<br />
-<div class="row">
-    <ul class="nav nav-pills">
-        <li>@Html.ActionLink("Default", "Default")</li>
-        <li>@Html.ActionLink("Horizontal", "Horizontal")</li>
-        <li class="active">@Html.ActionLink("Inline", "Inline")</li>
-        <li>@Html.ActionLink("Partial", "Partial")</li>
-        <li>@Html.ActionLink("Ajax", "Ajax")</li>
-    </ul>
-</div>
-
-<br />
 
 <div class="row">
 
