--- a/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Shared/_Layout.cshtml
@@ -2,6 +2,7 @@
 @{
     List<KeyValuePair<string, string>> navbar = new List<KeyValuePair<string, string>>();
     navbar.Add(new KeyValuePair<string, string>("Grid", "Row"));
+    navbar.Add(new KeyValuePair<string, string>("Text", "Index"));
     navbar.Add(new KeyValuePair<string, string>("Input", "Label"));
     navbar.Add(new KeyValuePair<string, string>("Form", "Default"));
     navbar.Add(new KeyValuePair<string, string>("Link", "Link"));
