--- a/src/FlexHtmlHelper.Sample/Views/Form/Partial.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Partial.cshtml
@@ -18,6 +18,12 @@
         @form.CheckBoxFor(m => m.AcceptTerms)
     }
 
-
-
 </div>
+
+<hr />
+<div class="row">
+    <div class="col-xs-12">
+        <script src="@string.Format("http://gist-it.appspot.com/github/liuhongbo/FlexHtmlHelper/blob/master/src/FlexHtmlHelper.Sample/Views/{0}/{1}.cshtml?footer=0",Html.ViewContext.RouteData.Values["Controller"].ToString(),"_Address")"></script>
+    </div>
+</div>
+<hr />
