--- a/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
@@ -26,7 +26,8 @@
         @form.CheckBoxFor(m => m.ForumPosts).CheckBoxFor(m => m.Newsletter).CheckBoxFor(m => m.BlogPosts)
         @form.CheckBoxFor(m => m.AcceptTerms).label_text("I have read and accepted the terms and conditions")
         @form.StaticFor(m => m.Log)
-
+        @form.Link(Html.f().ActionLink("Link", "Row", "Grid"))
+        @form.Link(Html.f().ActionLink("Link1", "Column", "Grid")).Link(Html.f().ActionLink("Link2", "Row", "Grid"))
         @form.Button(Html.f().Button("submit", "Submit").btn_primary()).Button(Html.f().Button("button", "Cancel"))
         @form.Button(Html.f().Button("button","Delete").btn_danger().btn_block())
     }
