formatvalue for null with format

--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -22,6 +22,7 @@
         @form.CheckBoxFor(m=>m.ForumPosts).CheckBoxFor(m=>m.Newsletter).CheckBoxFor(m=>m.BlogPosts)
         @form.CheckBoxFor(m => m.AcceptTerms).label_text("I have read and accepted the terms and conditions")
         @form.StaticFor(m => m.Log)
+        @form.StaticFor(m => m.PhoneNumber, string.IsNullOrEmpty(Model.PhoneNumber)?"No Phone Number": null)
 
         @form.Button(Html.f().Button("submit", "Submit").btn_primary()).Button(Html.f().Button("button", "Cancel"))
         @form.Button(Html.f().Button("button","Delete").btn_danger().btn_block()).input_col_md(4)
