--- a/src/FlexHtmlHelper.Sample/Views/Form/_AjaxEdit.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/_AjaxEdit.cshtml
@@ -21,6 +21,7 @@
     @form.CheckBoxFor(m => m.ForumPosts).CheckBoxFor(m => m.Newsletter).CheckBoxFor(m => m.BlogPosts)
     @form.CheckBoxFor(m => m.AcceptTerms).label_text("I have read and accepted the terms and conditions")
     @form.StaticFor(m => m.Log)
+    @form.StaticFor(m => m.PhoneNumber, string.IsNullOrEmpty(Model.PhoneNumber) ? "No Phone Number" : null)
 
     @form.Button(Html.f().Button("submit", "Submit").btn_primary())
 
