--- a/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Default.cshtml
@@ -23,8 +23,8 @@
         @form.CheckBoxFor(m => m.AcceptTerms).label_text("I have read and accepted the terms and conditions")
         @form.StaticFor(m => m.Log)
         @form.StaticFor(m => m.PhoneNumber, string.IsNullOrEmpty(Model.PhoneNumber)?"No Phone Number": null)
-
         @form.Button(Html.f().Button("submit", "Submit").btn_primary()).Button(Html.f().Button("button", "Cancel"))
+        @form.Button(Html.f().ActionLink("New", "new").Button()).Button(Html.f().ActionLink("Edit", "edit").Button()).Button(Html.f().ActionLink("Delete", "delete").Button())
         @form.Button(Html.f().Button("button","Delete").btn_danger().btn_block()).input_col_md(4)
     }
 
