--- a/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
+++ b/src/FlexHtmlHelper.Sample/Views/Form/Horizontal.cshtml
@@ -30,6 +30,7 @@
         @form.Link(Html.f().ActionLink("Link", "Row", "Grid"))
         @form.Link(Html.f().ActionLink("Link1", "Column", "Grid")).Link(Html.f().ActionLink("Link2", "Row", "Grid"))
         @form.Button(Html.f().Button("submit", "Submit").btn_primary()).Button(Html.f().Button("button", "Cancel"))
+        @form.Button(Html.f().ActionLink("New", "new").Button()).Button(Html.f().ActionLink("Edit", "edit").Button()).Button(Html.f().ActionLink("Delete", "delete").Button())
         @form.Button(Html.f().Button("button","Delete").btn_danger().btn_block())
     }
     
